# python-termsize

./: .gitignore  README.rst  setup.cfg  termsize.c  wininfo.c
termsize/: __init__.py  _termsize.c  tests.py
