[metadata]
name = python-termsize
version = 0.0.0
summary = Retrieve the up-to-date terminal width and height
download_url = UNKNOWN
author = Zbigniew Jędrzejewski-Szmek
author_email = zbyszek@in.waw.pl
classifier = Development Status :: 1 - Planning
    License :: OSI Approved :: BSD License
    Development Status :: 2 - Pre-Alpha

[files]
packages = termsize

[extension: termsize._termsize]
language = c
sources = termsize/_termsize.c
