[metadata]
name = python-termsize
version = 0.1
summary = Retrieve the up-to-date terminal width and height
download_url = https://github.com/keszybz/python-termsize/downloads
home-page = https://github.com/keszybz/python-termsize
author = Zbigniew Jędrzejewski-Szmek
author_email = zbyszek@in.waw.pl
classifier = Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Environment :: Console
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Terminals
    Topic :: Utilities

[files]
packages = termsize

[extension: termsize._termsize]
language = c
sources = termsize/_termsize.c
